# windev2021

./: .gitignore  README.md
01-Win32/: Window.cpp
01-Win32/01-Window/: Window.cpp
01-Win32/02-Messages/: Window.cpp
01-Win32/03-MessageBox/: Window.cpp
01-Win32/04-HelloWorld/: Window.cpp
01-Win32/05-Painting/: Window.cpp
01-Win32/06-Timer/: Window.cpp
01-Win32/07-Resource/: Window.cpp  Window.rc  Window.res
01-Win32/08-Threading/: ReadMe.md  Window.cpp
01-Win32/09-Sound/: Window.cpp  Window.i
01-Win32/10-Dll/: Readme.md
01-Win32/10-Library/: Readme.md
02-COM/: Readme.md
02-COM/01-ClassFactory/C-Client/: ClassFactoryDllServerWithRegFile_C.h  ClientOfClassFactoryDllServerWithRegFile.c
02-COM/01-ClassFactory/ClassFactoryDllServerWithRegFile/: ClassFactoryDllServerWithRegFile.cpp  ClassFactoryDllServerWithRegFile.def  ClassFactoryDllServerWithRegFile.exp  ClassFactoryDllServerWithRegFile.h  ClassFactoryDllServerWithRegFile.lib  ClassFactoryDllServerWithRegFile.reg
02-COM/01-ClassFactory/ClientOfClassFactoryDllServerWithRegFile/: ClientOfClassFactoryDllServerWithRegFile.cpp
02-COM/01-ClassFactory/Go-Client/: ClientOfClassFactoryDllServerWithRegFile.go  run.bat
02-COM/03-Aggregation/: ReadMe.md
02-COM/05-Automation/.NET Server With COM Client/: COMClient.cpp  (+2 more)
02-COM/05-Automation/Clients/Rust/IDispatch/: Cargo.toml
02-COM/05-Automation/Clients/Rust/IDispatch/src/: main.rs  main_0.rs
03-Dot Net/: SomeClass.cs
03-Dot Net/Mixed Code/: ManagedCPP.cpp
04-WinRT/01-Hello World/: Hello.cpp  Hello.winmd
AMC MathServer/: Window.cpp
(+269 files in other folders)
