[package]
name = "IDispatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.5"

[dependencies.windows]
version = "0.25.0"
features = [
    "Win32_Foundation",
    "Win32_System_Ole_Automation",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
]